kd/redis/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-tlr
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: redis-tlr
        service: redis-tlr
    spec:
      containers:
        - name: redis
          image: quay.io/ukhomeofficedigital/redis:v0.1.2
          ports:
            - containerPort: 6379
          command: ['/usr/bin/bash']
          args: ['-c', 'echo "requirepass ${REDIS_PASSWORD}" >> /etc/redis.conf && /run.sh']
          volumeMounts:
            - mountPath: /var/lib/redis
              name: data
          securityContext:
            runAsNonRoot: true
      volumes:
        - name: data
          emptyDir: {}
