kd/redis/network-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: redis-permit-access-tlr
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: pttg-euro-tlr-enquiry-form
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      name: redis-tlr
